--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -1,3 +1,11 @@
+<!--
+03- CSS and JS Variables
+Version 1.0.0
+Date Started: 08-01-18
+Last Updated: 08-01-18
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,10 +17,10 @@
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
-    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px"> <!-- made a data sizing attribute so JS knows what units to expect-->
 
     <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px"> 
 
     <label for="base">Base Color</label>
     <input id="base" type="color" name="base" value="#ffc600">
@@ -20,7 +28,23 @@
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
-  <style>
+<style>
+
+    :root{
+        --base:#ffc600;
+        --spacing:10px;
+        --blur:10px;
+    }
+
+    img{
+        padding: var(--spacing);
+        background-color:var(--base);
+        filter: blur(--blur);
+    }
+
+    .hl{
+        color:var(--base);
+    }
 
     /*
       misc styles, nothing to do with CSS variables
@@ -42,9 +66,19 @@
     input {
       width:100px;
     }
-  </style>
+</style>
 
   <script>
+const inputs = document.querySelectorAll('.controls input');
+
+function handleUpdate(){
+    const suffix = this.dataset.sizing || ''; // logs nothing if there's no suffix
+    document.documentElement.style.setProperty(`--${this.name}`,this.value + suffix)
+    //console.log(this.name);
+}
+  
+inputs.forEach(input => input.addEventListener('change', handleUpdate));
+inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
   </script>
 
 </body>
