--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -1,3 +1,11 @@
+<!-- 
+06- Ajax Type Ahead
+Version 1.0.0
+Date Started: 08-07-18
+Last Updated: 08-08-18
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +24,57 @@
   </form>
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+const cities = []; 
+// introducing fetch method and promise object
+fetch(endpoint)
+.then(blob => blob.json())
+.then(data => cities.push(...data));
+
+
+function findMatches(wordToMatch,cities){
+    return cities.filter(place=>{
+    
+    //figure out if the city/ state matches
+    // .match() is a regular expression
+    const regex = new RegExp(wordToMatch, 'gi');
+    //console.log(place.city.match(regex));
+    return place.city.match(regex) || place.state.match(regex);
+    
+});
+}
+
+function numberWithCommas(x) {
+  return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+}
+
+function displayMatches(){
+    //console.log(e);
+    const matchArray = findMatches(this.value, cities);
+    //console.log(matchArray);
+    const html = matchArray.map(place => {
+        const regex = new RegExp(this.value, 'gi');
+        const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+        const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+        return `
+        <li>
+        <span class="name">${cityName}, ${stateName}</span>
+        <span class="population">${numberWithCommas(place.population)}</span>
+        </li>
+        `;
+    }).join(''); //combines multiple items in an arry into a string
+    //console.table(html);
+    suggestions.innerHTML = html;
+}
+
+const searchInput = document.querySelector('.search');
+const suggestions = document.querySelector('.suggestions');
+
+searchInput.addEventListener('change', displayMatches);
+searchInput.addEventListener('keyup', displayMatches);
+
+// then returns a giant blob of data but doesn't know what kind of data is being returned (we know it's JSON)
+
 
 </script>
   </body>
