--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -1,3 +1,11 @@
+<!-- 
+10- Dev Tools Domination
+Version 1.0.0
+Date Started: 08-14-18
+Last Updated: 08-17-18
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -99,6 +107,35 @@
   </div>
 
 <script>
+const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+
+let lastChecked; // previous value for checked
+
+function handleCheck(e){
+// check for Shift Key
+// check for the "checked" event
+    let inBetween = false; // inBetween is a variable for the state of the elements between the currently checked box and the last checked box
+
+    if (this.checked && e.shiftKey){
+    // start the shift clicking
+        checkboxes.forEach(checkbox =>{ // for each checkbox element, check if the element is the one that we checked
+            if (checkbox === this || checkbox === lastChecked){
+                console.log('starting checkbox sweep'); 
+                inBetween = !inBetween; // if checkbox is the current one that's' checked, then set inBetween = the inverse value
+            }
+
+            if (inBetween){
+                checkbox.checked = true;
+            }
+        });
+    }
+
+    lastChecked = this; // is the current checkbox being clicked
+
+}
+
+
+checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck)); // 'click' applies even if you use your keyboard to trigger the event
 </script>
 </body>
 </html>
