--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -1,5 +1,5 @@
 <!-- 
-10- Dev Tools Domination
+10- Hold Shift To Check Multiple Checkboxes
 Version 1.0.0
 Date Started: 08-14-18
 Last Updated: 08-17-18
